# dump222

./: .dockerignore  .gitignore  Dockerfile  README.md  config.json  node-agent.md  pyproject.toml
client/: pyproject.toml
client/press_node_agent_client/: __init__.py  auth_context.py  client_async.py  client_sync.py  config.py
development/: README.md  authz_server.py  config.json  dummy_agent.py
docs/: 1-overview.md  2-setup.md  3-proxying.md  4-write-agent.md
node_agent/: admin_app.py  agent_discovery.py  auth.py  config.py  docker.md  main.py  proxy_app.py  proxy_client.py  routes.py
press_node_agent/: __main__.py  config.py  discovery.py  helpers.py  proxy_client.py  routes.py
press_node_agent/apps/: __init__.py  admin.py  proxy.py
press_node_agent/auth/: __init__.py  cache.py  jwks.py  validator.py
